--- a/thesis/misc/style.css
+++ b/thesis/misc/style.css
@@ -1,5 +1,9 @@
 
 
+body > div.book.without-animation.with-summary.font-size-2.font-family-1 > div.book-summary > nav > ul > li:nth-child(1) > a {
+  padding-top: 20px;
+}
+
 p.caption { 
   font-family: Arial;
   font-size: 12pt;
